# my_egui_skel

./: Cargo.toml
locales/: en.yaml  fr.yaml
src/: error.rs  lib.rs  main.rs  ui.rs  worker.rs
src/api/: hackernews.rs
src/error/: apperror.rs
src/ui/: app.rs  myapp.rs  pages.rs  state.rs
src/ui/pages/main/: ui.rs
src/ui/pages/product/: list.rs
src/worker/: builder.rs
