[package]
name = "my_egui_skel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.27.2"
eframe = "0.27.2"
egui_extras = { version = "0.27.2", features = ["svg", "all_loaders"]}
egui-aesthetix = { version = "0.2.3", features = ["all_themes"] }
env_logger = "0.11.3"
log = "0.4.21"
